# uab-pp

./: CMakeLists.txt
Lab-Ex-1/: finite-differences.c  finite-differences_3.c  finite_helper.py  laplace-jacobi-iteration.c  laplace-jacobi-iteration_1.c  laplace-jacobi-iteration_3.c  laplace2d_5.c  mergesort.c
c_programming_performance_lab/: Diffg_0  Diffg_0slow  Diffg_4  Diffi_2  Diffi_3  Diffi_4  benchmark.ods  benchmark.txt  benchmark3.txt  diff.c
c_programming_performance_lab/report/: Benchmark.xlsx  Benchmark2.xlsx  Benchmark3.xlsx  report.tex
openmp/: initial_lapFusion.c  lapFusion.c
openmp/benchmarks/: OMP Results.xlsx  openmp_benchmark1.txt  openmp_benchmark2.txt  openmp_benchmark4.txt  openmp_benchmark8.txt  papi_benchmark1.txt  papi_benchmark2.txt  papi_benchmark4.txt  papi_benchmark8.txt  papifpops_benchmark1.txt  papifpops_benchmark2.txt  papifpops_benchmark4.txt  papifpops_benchmark8.txt  perf_benchmark.txt
performance_lab/: Diffg_0Double  Diffg_0O1  Diffg_0O2  Diffg_0O3  Diffg_1  Diffg_2  Diffg_3  Diffg_5  Diffi_0  Diffi_1  Diffi_5  benchmark.ods  benchmark2.txt  diff.c  perf.data
performance_lab/report/: Benchmark2.xlsx  Benchmark3.xlsx  report.aux
